<resources>
    <string name="app_name">悦运酷</string>
    <string name="skip">skip</string>
    <string name="finish">finish</string>
    <string name="edt_phone">请输入手机号</string>
    <string name="edt_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="register">立即注册</string>
    <string name="edt_set_pwd">请设置密码</string>
    <string name="edt_confirm_pwd">请确认密码</string>
    <string name="edt_verification_code">请输入验证码</string>
    <string name="btn_acq_code">获取短信验证码</string>
    <string name="btn_register_person">注册</string>
    <string name="btn_register_business">商家注册</string>
    <string name="tv_login">登录</string>
    <string name="me">我</string>
    <string name="no_logined">未登录</string>
    <string name="sign_name">签名</string>
    <string name="arrange">约运动</string>
    <string name="right">电话号码合法</string>
    <string name="error">电话号码非法</string>
    <string name="sendcodesuccess">发送验证码成功</string>
    <string name="pwdnull">密码或确认密码都不能为空</string>
    <string name="pwdnosame">密码长度不一致</string>
    <string name="pwdfalse">密码长度必须在6到16位之间</string>
    <string name="registersuccess">注册成功!</string>
    <string name="registerfail">注册失败，请检查验证码是否正确</string>
    <string name="send_request_fail">发送请求失败</string>
    <string name="no_login">当前未登录</string>
    <string name="wait">请稍候...</string>
    <string name="logining">登录中...</string>
    <string name="login_fail">登录失败，请检查网络状态或密码是否正确</string>
    <string name="login_success">登录成功</string>
    <string name="logout">退出登录中</string>
    <string name="logouting">退出登录</string>
    <string name="logout_success">退出登录成功</string>
    <string name="tv_place_sport">运动场所</string>
    <string name="tv_more">更多>></string>
    <string name="tv_activity_hot">热门活动</string>
    <string name="tv_order_sport">运动类型</string>
    <string name="yue_dong_quan">悦动圈</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="write_dynamic">写动态</string>
    <string name="send">发送</string>
    <string name="sendMotion">发表心情</string>
    <string name="content_no_null">内容不能为空</string>
    <string name="posting">正在发送...</string>
    <string name="load_fail">加载失败</string>
    <string name="head">头像</string>
    <string name="person_msg">个人信息</string>
    <string name="upload_head_success">上传头像成功</string>
    <string name="upload_head_fail">上传头像失败</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="guangzhou">广州</string>
    <string name="area">地区</string>
    <string name="gender">性别</string>
    <string name="address">地址</string>
    <string name="nicheng">昵称</string>
    <string name="save">保存</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="no_write">未填写</string>
    <string name="username">昵称</string>
    <string name="send_success">发送成功</string>
    <string name="comment">评论</string>
    <string name="send_comment">发表评论</string>
    <string name="content_null">内容为空</string>
    <string name="post_success">发表成功</string>
    <string name="post_fail">发表失败</string>
    <string name="get_comment_fail">获取评论失败</string>
    <string name="updata_comments_success">更新评论成功</string>
    <string name="updata_comments_fail">更新评论失败</string>
    <string name="has_zan">你已经赞了该动态</string>
    <string name="my_dynamic">我的动态</string>
    <string name="del_success">删除成功</string>
    <string name="del_fail">删除失败</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="next">下一步</string>
    <string name="account_no_exits">账号不存在</string>
    <string name="send_code_success">发送验证码成功</string>
    <string name="send_code_fail">发送验证码失败</string>
    <string name="btn_reset_pwd">重置密码</string>
    <string name="reset_pwd_success">重置成功</string>
    <string name="reset_pwd_fail">重置失败</string>
    <string name="no_arrow">不允许商家登录</string>
</resources>
