<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp"
        android:background="@drawable/bg">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/logo2"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:inputType="number"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@mipmap/phone"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:background="@drawable/bg_edt"
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_phone"
            android:textColorHint="@color/edt"/>

        <EditText
            android:inputType="textPassword"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@mipmap/phone"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edt"
            android:id="@+id/edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_pwd"
            android:textColorHint="@color/edt"/>

        <Button
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:id="@+id/btn_login"
            android:textColor="@color/btnlogin"
            android:background="@drawable/bg_btn_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/btnlogin"
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_forgetpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/forgetpwd" />

            <TextView
                android:textColor="@color/btnlogin"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
