<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_fragment"
              tools:context="com.gdcp.yueyunku_client.ui.activity.PersonInformationActivity">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:clickable="true"
        android:id="@+id/rl_change_head"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_layout_selector"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/look_head"
            android:layout_centerVertical="true"
            android:layout_marginBottom="9dp"
            android:layout_alignParentRight="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="15dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo3"/>
        <View
            android:layout_below="@+id/look_head"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/middleText"
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/bg_layout_selector"
        android:id="@+id/rl_change_name"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/nicheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/tv_username"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="张三"
            />
    </RelativeLayout>

    <RelativeLayout
        android:clickable="true"
        android:id="@+id/rl_change_gender"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_layout_selector"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/tv_gender"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            />
        <View
            android:layout_alignParentBottom="true"
            android:background="@color/middleText"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/bg_layout_selector"
        android:id="@+id/rl_change_area"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/tv_area"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guangzhou"
            />
        <View
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentBottom="true"
            android:background="@color/middleText"
            android:layout_width="match_parent"
            android:layout_height="0.5dp">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/bg_layout_selector"
        android:id="@+id/rl_change_signature"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/sign_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginRight="15dp"
            android:id="@+id/tv_signature"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />
    </RelativeLayout>


</LinearLayout>
