<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="30dp"
        android:background="@drawable/bg">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/logo2"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:inputType="textPassword"
            android:drawablePadding="20dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@mipmap/phone"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edt"
            android:id="@+id/edt_set_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_set_pwd"
            android:textColorHint="@color/edt"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_verification_code"
                android:drawablePadding="20dp"
                android:paddingLeft="10dp"
                android:drawableLeft="@mipmap/phone"
                android:paddingBottom="15dp"
                android:paddingTop="15dp"
                android:background="@drawable/bg_edt"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/edt_verification_code"
                android:textColorHint="@color/edt"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_reset_pwd"
                android:textSize="18sp"
                android:textColor="@color/btnlogin"
                android:background="@drawable/bg_btn_selector"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset_pwd"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

